Clean up CDN URLs - remove -cdn-cdn repetition
Migrated from qne-installers-cdn storage zone to qne-installers.

Old URL: https://qne-installers-cdn-cdn.b-cdn.net (redundant -cdn-cdn)
New URL: https://qne-installers-cdn.b-cdn.net (clean!)

Changes:
- Updated main.go Keeper AppImage URL
- Updated GitHub Actions workflow storage zone name
- Updated README download instructions
- Updated website download URLs

Files already uploaded to new storage zone and tested.

Next: Update GitHub secret BUNNY_STORAGE_PASSWORD_INSTALLERS
with new password: f053c4a9-e856-43f3-bfcea93e5bf4-87fc-46f7

--- a/website/index.html
+++ b/website/index.html
@@ -119,9 +119,9 @@
 
         // Download URLs
         const downloadURLs = {
-            'Linux': 'https://qne-installers-cdn-cdn.b-cdn.net/keeper-installer-linux-amd64',
-            'Windows': 'https://qne-installers-cdn-cdn.b-cdn.net/keeper-installer-windows-amd64.exe',
-            'macOS': 'https://qne-installers-cdn-cdn.b-cdn.net/keeper-installer-darwin-amd64'
+            'Linux': 'https://qne-installers-cdn.b-cdn.net/keeper-installer-linux-amd64',
+            'Windows': 'https://qne-installers-cdn.b-cdn.net/keeper-installer-windows-amd64.exe',
+            'macOS': 'https://qne-installers-cdn.b-cdn.net/keeper-installer-darwin-amd64'
         };
 
         // Initialize on page load
